Add qr code and content linking
